added content to published games

--- a/onlinegames.html
+++ b/onlinegames.html
@@ -20,14 +20,14 @@
         </header>
         
         <nav>
-            <a class="navdiv" href="index.html">
+            <a class="navdiv" href="onlinegames.html">
                 <div>
                     <input type="image" class="navlogo" src="./imgs/joystick.png"/>
                     <p class="navtext">Online Games</p>
                 </div>
             </a>
             
-            <a class="navdiv" href="index.html">
+            <a class="navdiv" href="publishedgames.html">
                 <div>
                     <input type="image" class="navlogo" src="./imgs/gamefolder.png"/>
                     <p class="navtext">Published Games</p>
