first game added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="https://www.flaticon.com/free-icons/steam" title="steam icons">Steam icons created by Freepik - Flaticon</a>
     <a href="https://www.flaticon.com/free-icons/chat-box" title="chat box icons">Chat box icons created by Pixel perfect - Flaticon</a>
     <a href="https://www.flaticon.com/free-icons/login" title="login icons">Login icons created by Pixel perfect - Flaticon</a>
+    <a href="https://www.flaticon.com/free-icons/google-play-music" title="google play music icons">Google play music icons created by IYAHICON - Flaticon</a>
 
     -->
     
