first game database functionality + leaderboard

--- a/onlinegames.html
+++ b/onlinegames.html
@@ -35,7 +35,7 @@
                 
                 <p>Click the button, gain points, see how you compare to others on the leaderboard!</p>
                 
-                <a class="navdiv" href="./ClickTheButton/001.html">
+                <a class="navdiv" href="./ClickTheButton/index.html">
                     <input type="image" class="navlogo" src="./imgs/play.png"/>
                     <p class="navtext" id="publink">Play game</p>
                 </a>
