Survivor guy update

--- a/index.html
+++ b/index.html
@@ -52,8 +52,19 @@
                 <h1>Changelog V1.2.0</h1><br>
                 
                 <p>
+                    - Survivor Guy Update<br><br>
+                    - Many new cards including Sniper, Shotgun, Fast Fingers, and more!<br><br>
+                    - Enemy HP now begins rapidly scaling around the 4 minute mark.<br><br><br><br><br><br><br><br><br>
+                    2025/03/31 at 5:20pm
+                </p>
+            </div>
+
+            <div class="pubitem" style="height:auto;">
+                <h1>Changelog V1.2.0</h1><br>
+                
+                <p>
                     - New game!!<br><br>
-                    - Play Survivor Guy and survive endless waves of enemies.<br><br><br><br><br><br><br><br><bn><br><br><br><br>
+                    - Play Survivor Guy and survive endless waves of enemies.<br><br><br><br><br><br><br><br><br><br><br><br>
                     2025/03/31 at 2:45am
                 </p>
             </div>
