online game style polishing

--- a/ASurvivorGuy/index.html
+++ b/ASurvivorGuy/index.html
@@ -99,6 +99,12 @@
         <nav id="nav"></nav>
 
         <br><br>
+
+        <div id="gamedetails">
+            Survive endless hordes of many kinds of enemies while collecting<br>upgrade cards to increase your survivability. Survive as long as possible and<br>compare your score to other people.<br><br>
+            Controls:<br><br>Hold LEFT CLICK or SPACE to fire<br>WASD to move<br>MOUSE to aim
+        </div>
+        <br><br>
         
         <div class="gm4html5_div_class" id="gm4html5_div_id">
             
