--- a/ClickTheButton/index.html
+++ b/ClickTheButton/index.html
@@ -99,7 +99,12 @@
         <nav id="nav"></nav>
 
         <br><br>
-        
+
+        <div id="gamedetails">
+            Click the button, absorb words of encouragement from that little guy,<br>and compete for a top spot on the leaderboard!<br><br>
+            Controls: Left click to press button.
+        </div>
+        <br><br>
         <div class="gm4html5_div_class" id="gm4html5_div_id">
             
             <!-- Builtin injector for splash screen -->
