--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
                 <h1>Changelog V1.3.0</h1><br>
                 
                 <p>
+                    - New Survivor Guy update!<br><br>
+                    - A couple new cards.<br><br>
+                    - New ranged enemy, plus lots of late-game balancing.<br><br><br><br><br>
+                    2025/04/3 at 4:20pm
+                </p>
+            </div>
+
+            <div class="pubitem" style="height:auto;">
+                <h1>Changelog V1.3.0</h1><br>
+                
+                <p>
                     - We are now a mostly secure site! Any new account will require email verification.<br><br>
                     - Unfortunately that meant that I had to purge all existing accounts, but I will be glad to return any lost points.<br><br>
                     - Profile picture drawing is finally fixed and back in action.<br><br><br><br><br>
