fixes to how saving points works

--- a/ClickTheButton/index.html
+++ b/ClickTheButton/index.html
@@ -116,9 +116,9 @@
             </canvas>
         </div>
 
-        <div id="save-btn">
+        <!-- <div id="save-btn">
             <button id="save">Save Points</button>
-        </div>
+        </div> -->
 
         <br><br>
 
@@ -126,7 +126,8 @@
 
         <div id="list"></div>
 
-        <div><div><div><div><div class="styling" id="0"></div></div></div></div></div>
+        <div class="stylingCode" id="0"></div>
+        <div class="styling" id="0">
         <div class="load" id="0"></div>
         <div class="load2" id="0"></div>
 
