redesign and bug fixes

--- a/ASurvivorGuy/index.html
+++ b/ASurvivorGuy/index.html
@@ -117,17 +117,14 @@
             </canvas>
         </div>
 
-        <div id="save-btn">
-            <button id="save">Save Points</button>
-        </div>
-
         <br><br>
 
         <h2>Leaderboard</h2>
 
         <div id="list"></div>
 
-        <div><div><div><div><div class="styling" id="0"></div></div></div></div></div>
+        <div class="stylingCode" id="0"></div>
+        <div class="styling" id="0">
         <div class="load" id="0"></div>
         <div class="load2" id="0"></div>
 
