--- a/profile.html
+++ b/profile.html
@@ -46,7 +46,7 @@
                 <canvas id="picture"></canvas>
             </div>
             
-            <button class="btn" id="edit-prof">Edit</button><br><br>
+            <button class="btn" id="edit-prof">Edit</button><p id="edit-prof" style="color: white; text-align: center;">(Warning: this will reset your picture if clicked)</p><br><br>
 
             <div id="namediv"><div id="nametext"></div></div>
             <button class="btn" id="edit-name">Edit</button>
